<?xml version="1.0" encoding="US-ASCII"?>
<!--
 ! Copyright (c) 2023 Red Hat, Inc.
 !
 ! Licensed under the Apache License, Version 2.0 (the "License");
 ! you may not use this file except in compliance with the License.
 ! You may obtain a copy of the License at
 !
 !     http://www.apache.org/licenses/LICENSE-2.0
 !
 ! Unless required by applicable law or agreed to in writing, software
 ! distributed under the License is distributed on an "AS IS" BASIS,
 ! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ! See the License for the specific language governing permissions and
 ! limitations under the License.
 `-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.fedoraproject.xmvn</groupId>
  <artifactId>xmvn-generator</artifactId>
  <version>1.0.0</version>
  <name>XMvn Generator</name>
  <description>
    XMvn Generator is a dependency generator RPM Package Manager.
  </description>
  <url>https://github.com/fedora-java/xmvn-generator</url>
  <inceptionYear>2023</inceptionYear>
  <organization>
    <name>Red Hat, Inc.</name>
    <url>http://www.redhat.com/</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>mizdebsk</id>
      <name>Mikolaj Izdebski</name>
      <email>mizdebsk@redhat.com</email>
      <organization>Red Hat, Inc.</organization>
      <organizationUrl>http://www.redhat.com/</organizationUrl>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <mailingLists>
    <mailingList>
      <name>Fedora Java development List</name>
      <post>java-devel@lists.fedoraproject.org</post>
      <archive>http://lists.fedoraproject.org/pipermail/java-devel/</archive>
      <subscribe>https://admin.fedoraproject.org/mailman/listinfo/java-devel</subscribe>
      <unsubscribe>https://admin.fedoraproject.org/mailman/listinfo/java-devel</unsubscribe>
    </mailingList>
  </mailingLists>
  <scm>
    <url>https://github.com/fedora-java/xmvn-generator</url>
    <connection>scm:git:https://github.com/fedora-java/xmvn-generator.git</connection>
    <developerConnection>scm:git:git@github.com:fedora-java/xmvn-generator.git</developerConnection>
  </scm>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/fedora-java/xmvn-generator/issues/</url>
  </issueManagement>
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.4</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>1.22</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>4.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>17</release>
          <compilerArgs>
            <arg>--add-modules=jdk.incubator.foreign</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>--enable-preview --add-modules jdk.incubator.foreign --enable-native-access ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
